--- a/backend/backend-manifest.yaml
+++ b/backend/backend-manifest.yaml
@@ -63,3 +63,18 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: backend
+ namespace: expense
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: backend
+ minReplicas: 1
+ maxReplicas: 10
+ targetCPUUtilizationPercentage: 15
